# GameServer

./: README.md  RakServer.sln
RakServer/: AI.h  AddEntityTask.cpp  AddEntityTask.h  AuthPoolerPacket.cpp  Avatar.cpp  Avatar.h  CMakeLists.txt  CharacterSelectHandler.h  Chunk.h  Client.cpp  Client.h  ConfigLoader.cpp  ConfigLoader.h  ConnectedClient.cpp  ConnectedClient.h  CreateWorldPacket.cpp  DatabaseWorker.cpp  DatabaseWorker.h  DatabaseWorkerHandler.h  DbWorkerConnFailHandler.h  Entity.cpp  Entity.h  FInishLoadingWorldHandler.h  FileManager.cpp  FutureHandler.cpp  FutureHandler.h  NetworkListener.cpp  OnAddNearSignal.cpp  OnAddNearSignal.h  OnRemoveNearSignal.cpp  OnRemoveNearSignal.h  Packet.h  PacketTypes.h  PacketsPooler.h  PhyWorkConnFailHanler.h  PhysicsWorker.cpp  PhysicsWorker.h  PhysicsWorkerConnectHandler.h  PhysicsWorkerPackets.h  PlayerMeeter.cpp  (+33 more)
RakServer/RakServer/: AuthPoolerPacket.cpp  AuthPoolerPacket.h  CharacterSelectHandler.h  Chunk.h  Client.cpp  Client.h  ClientState.h  ConfigLoader.cpp  ConnToAuthFailHandler.h  ConnectedClient.cpp  ConnectedClient.h  CreateWorldPacket.cpp  CreateWorldPacket.h  DatabaseWorker.cpp  DatabaseWorker.h  Entity.cpp  Entity.h  FileManager.h  GameServerDisconnectHandler.h  GameTask.cpp  GameTask.h  LoadWorldPacket.h  NetworkListener.h  PacketTypes.h  PacketsPooler.cpp  PhysicsWorker.h  PlayerMeeter.cpp  PlayerMeeter.h  PoolerClientConnectHandler.h  RakServer.cpp  RakServer.vcxproj  RakServer.vcxproj.filters  ReadMe.txt  ServVars.h  Server.cpp  Server.h  ServerConnectHandler.h  StateProcessor.cpp  Stateable.cpp  (+19 more)
(+79 files in other folders)
